
[package]
name = "rpc-tester"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-trace.workspace = true
alloy-provider = { workspace = true, features = ["trace-api", "debug-api"] }
alloy-json-rpc = "0.11.1"
alloy-transport = "0.11.1"

assert-json-diff.workspace = true
eyre.workspace = true
futures.workspace = true
serde = { workspace = true, default-features = false }
serde_json.workspace = true
tokio = { workspace = true, default-features = false }
tracing.workspace = true
